--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script type="text/javascript" src="C:\Users\Caner\Desktop\Continuous Learning\Studio\jquery-3.3.1.js"></script>
+	<script type="text/javascript" src="jquery-3.3.1.js"></script>
 	<!--<meta charset="utf-8"/>-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>myLibrary</title>
