--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="col-8">
 		
-			<a href="#" target="_blank"><img src="images/twitter.jpg" alt="Follow Me on Twitter" id = "icon_twitter"></a>
+			<a href="http://bit.ly/CanerSezgin" target="_blank"><img src="images/twitter.jpg" alt="Follow Me on Twitter" id = "icon_twitter"></a>
 			<a href="https://github.com/casedo" target="_blank"><img src="images\github.png" alt="Follow Me on GitHub" id = "icon_github"></a> 
 		</div>
 		</center>
