--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 </center>
 
-<footer><p> © Coded by <b><a href="https://github.com/casedo">Casedo</b> (Caner SEZGIN)</a></p>
+<footer><p> © Coded by <b><a href="https://github.com/CanerSezgin">Caner SEZGIN</b></a></p>
 </footer>
 	
 <script src="main.js" type="text/javascript"></script>
